new features on the portfolio

--- a/index.html
+++ b/index.html
@@ -1,100 +1,103 @@
 <!DOCTYPE html>
+<html>
 
-<head>
-    <meta charset="utf-8">
-    
-    <title>Cássia Bernardo</title>
+    <head>
+        <meta charset="utf-8">
 
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat|Saira+Extra+Condensed:600&display=swap" rel="stylesheet">
+        <title>Cássia Bernardo</title>
 
-    <!-- CSS Stylesheet -->
-    <link rel="stylesheet" href="style.css">
+        <!-- Google Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Montserrat|Saira+Extra+Condensed&display=swap" rel="stylesheet">
 
-    <!-- Font Awesome Script -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
-        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+        <!-- Font Awesome Script -->
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+            integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 
+        <!-- CSS Stylesheet -->
+        <link rel="stylesheet" href="styles.css">
 
-    <!-- Bootstrap Script -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    </head>
 
-</head>
+    <body>
+        <div class="container">
+            <div class="sideNav">
+                <img src="images/cassia.jpeg" alt="profile photo">
+                <div class="myLinks">
+                    <a href="#about">About</a>
+                    <a href="#skills">Skills</a>
+                    <a href="#projects">Projects</a>
+                    <a href="#contact">Contact</a>
+                </div> <!-- end of myLinks -->
+            </div> <!-- end of sideNav -->
 
-<body>
-    <div class="container-flex">
-        <div class="row">
-
-            <!-- Lateral Menu -->
-            <div class="col-sm-12 col-lg-2 lateral-menu">
-                <img src="images/cassia.jpeg" alt="cassia's photo">
-                <ul>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#skills">Skills</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </div> <!-- end of col-lg-2 -->
-
-            <div class="col-lg-10">
+            <div class="mainContent"> 
 
                 <!-- About Section -->
                 <div class="about" id="about">
-                    <h1>CÁSSIA BERNARDO</h1>
+                    <h1>CÁSSIA <span>BERNARDO</span></h1>
+                    <h3>cascrisbern@gmail.com</h3>
                     <p>
                         I am an aspiring self-taught Junior Web Designer / Developer with professional background in HR
                         and Admin. My passion for web design drove me to make a career change from HR to UX Design /
-                        Frontend Development in 2018. I took courses in Coursera, Udemy and Udacity and I got certified
-                        in Introduction to Web Development and Programming. Recently, I enrolled in a UX design course
-                        at UX Design Institute. My goal is to secure a Junior Frontend Developer position in Dublin as
-                        soon as possible and develop professionally.
+                        Frontend Development in 2018. 
                     </p>
-                    <a target="_blank" href="https://www.linkedin.com/in/c%C3%A1ssia-cristina-b-78059ab6/"><i class="social-icon fab fa-linkedin"></i></a>
-                    <a target="_blank" href="https://github.com/cah90"><i class="social-icon fab fa-github-square"></i></a>
-                    <hr>
+                    <a target="_blank" href="https://www.linkedin.com/in/c%C3%A1ssia-cristina-b-78059ab6/"><i
+                            class="social-icon fab fa-linkedin"></i></a>
+                    <a target="_blank" href="https://github.com/cah90"><i
+                            class="social-icon fab fa-github-square"></i></a>
+
                 </div>
+
+                <hr>
 
                 <!-- Skills Section -->
                 <div class="skills" id="skills">
                     <h2>SKILLS</h2>
-                    <table class="table table-borderless table-responsive-sm">
+                    <table>
                         <tbody>
                             <tr>
                                 <td>HTML5</td>
-                                <td>&starf;&starf;&starf;&starf;</td>
+                                <td><span> &starf;&starf;&starf;&starf;</span></td>
                                 <td>JavaScript</td>
-                                <td>&starf;&starf;</td>
+                                <td><span> &starf;&starf;</span></td>
                             </tr>
                             <tr>
                                 <td>CSS3</td>
-                                <td>&starf;&starf;&starf;&starf;</td>
+                                <td><span> &starf;&starf;&starf;&starf;</span></td>
                                 <td>jQuery</td>
-                                <td>&starf;&starf;</td>
+                                <td><span> &starf;&starf;</span></td>
                             </tr>
                             <tr>
                                 <td>SASS</td>
-                                <td>&starf;&starf;&starf;</td>
+                                <td><span> &starf;&starf;</span></td>
                                 <td>Git</td>
-                                <td>&starf;&starf;&starf;</td>
+                                <td><span> &starf;&starf;&starf;</span></td>
                             </tr>
                             <tr>
                                 <td>Bootstrap</td>
-                                <td>&starf;&starf;&starf;</td>
+                                <td><span> &starf;&starf;&starf;</span></td>
                                 <td>Linux command line</td>
-                                <td>&starf;&starf;&starf;</td>
+                                <td><span> &starf;&starf;&starf;</span></td>
+                            </tr>
+                            <tr>
+                                <td>UX</td>
+                                <td><span> &starf;&starf;&starf;&starf;</span></td>
                             </tr>
                         </tbody>
 
                     </table>
-                    <hr>
-                </div>
+
+                </div> <!-- end of skills section-->
+
+                <hr>
 
                 <!-- Projects Section -->
                 <div class="projects" id="projects">
                     <h2>PROJECTS</h2>
-                    <hr>
-                </div>
+
+                </div> <!-- end of projects section -->
+
+                <hr>
 
                 <!-- Contact Section -->
                 <div class="contact" id="contact">
@@ -102,32 +105,29 @@
 
                     <form>
                         <div class="form-group">
-                            <label for="name"></label>
-                            <input type="text" class="form-control" id="name" placeholder="name">
+                            <label for="name">Name:</label>
+                            <input type="text" id="name" placeholder="">
                         </div>
                         <div class="form-group">
-                            <label for="email"></label>
-                            <input type="text" class="form-control" id="email" placeholder="email">
+                            <label for="email">Email:</label>
+                            <input type="text" id="email" placeholder="">
                         </div>
                         <div class="form-group">
-                            <label for="message"></label>
-                            <textarea rows="5" type="text" class="form-control" id="message" placeholder="message"></textarea>
+                            <label for="message">Message:</label>
+                            <textarea rows="3" type="text"  id="message" placeholder=""></textarea>
                         </div>
 
-                        <button type="button" class="btn btn-primary btn-lg">Send</button>
+                        <button type="button">Send</button>
                     </form>
 
-                </div>
+                </div> <!-- end of contact section -->
 
                 <footer>
-                        <p>© Copyright 2019 Cássia Bernardo</p>
+                    <p>© Copyright 2019 <span class="footerSpan">♥</span> Cássia Bernardo</p>
                 </footer>
 
-            </div> <!-- end of col-lg-10 -->
-        </div> <!-- end of row -->
-    </div> <!-- end of container-flex -->
-
-
-</body>
+            </div> <!-- end of mainContent -->
+        </div> <!-- end of container -->
+    </body>
 
 </html>
