--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         <title>Cássia Bernardo</title>
 
         <!-- Google Fonts -->
-        <link href="https://fonts.googleapis.com/css?family=Montserrat|Saira+Extra+Condensed&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat|Saira+Extra+Condensed&display=swap"
+            rel="stylesheet">
 
         <!-- Font Awesome Script -->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
@@ -15,6 +16,11 @@
 
         <!-- CSS Stylesheet -->
         <link rel="stylesheet" href="styles.css">
+
+        <!-- jQuery Script -->
+
+        <script src="https://code.jquery.com/jquery-3.4.1.js"
+            integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
 
     </head>
 
@@ -30,7 +36,7 @@
                 </div> <!-- end of myLinks -->
             </div> <!-- end of sideNav -->
 
-            <div class="mainContent"> 
+            <div class="mainContent">
 
                 <!-- About Section -->
                 <div class="about" id="about">
@@ -39,7 +45,7 @@
                     <p>
                         I am an aspiring self-taught Junior Web Designer / Developer with professional background in HR
                         and Admin. My passion for web design drove me to make a career change from HR to UX Design /
-                        Frontend Development in 2018. 
+                        Frontend Development in 2018.
                     </p>
                     <a target="_blank" href="https://www.linkedin.com/in/c%C3%A1ssia-cristina-b-78059ab6/"><i
                             class="social-icon fab fa-linkedin"></i></a>
@@ -105,16 +111,19 @@
 
                     <form>
                         <div class="form-group">
-                            <label for="name">Name:</label>
                             <input type="text" id="name" placeholder="">
+                            <label for="name">Name:</label>
+
                         </div>
                         <div class="form-group">
-                            <label for="email">Email:</label>
                             <input type="text" id="email" placeholder="">
+
+                            <label for="email">Email:</label>
                         </div>
                         <div class="form-group">
+                            <textarea rows="3" type="text" id="message" placeholder=""></textarea>
+
                             <label for="message">Message:</label>
-                            <textarea rows="3" type="text"  id="message" placeholder=""></textarea>
                         </div>
 
                         <button type="button">Send</button>
@@ -128,6 +137,9 @@
 
             </div> <!-- end of mainContent -->
         </div> <!-- end of container -->
+
+        <script src="script.js"></script>
+
     </body>
 
 </html>
