--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     </head>
 
     <body>
+        
         <div class="container">
             <div class="sideNav" id="sideNav">
                 <img src="images/cassia.jpeg" alt="profile photo">
@@ -39,6 +40,10 @@
 
 
             <div class="mainContent">
+
+                    <div id="debugScrollPosition">
+                            some content
+                            </div>
 
                 <!-- About Section -->
                 <div class="section" id="about">
