project section modification

--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@
 
             <div class="mainContent">
 
-                    <div id="debugScrollPosition">
-                            some content
-                            </div>
+                    <!-- <div id="debugScrollPosition"> </div> -->
 
                 <!-- About Section -->
                 <div class="section" id="about">
@@ -112,9 +110,9 @@
                         <a target="_blank" href="https://www.amordecozinha.com"><img src="images/amor-de-cozinha.png"
                                 alt="amor-de-cozinha"></a>
 
-                        <a target="_blank" href="#"><img src="images/amor-de-cozinha.png" alt="amor-de-cozinha"></a>
+                        <a target="_blank" href="https://cah90.github.io/compound-interest/ "><img src="images/compound-interest.png" alt="compound-interest-calculator"></a>
 
-                        <a target="_blank" href="#"><img src="images/amor-de-cozinha.png" alt="amor-de-cozinha"></a>
+                        <a target="_blank" href="#"><img src=# alt="amor-de-cozinha"></a>
 
                     </div> <!-- end of containerProjects -->
 
