--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         <a target="_blank" href="https://www.amordecozinha.com"><img src="images/amor-de-cozinha.png"
                                 alt="amor-de-cozinha"></a>
 
-                        <a target="_blank" href="https://cah90.github.io/compound-interest/ "><img src="images/compound-interest.png" alt="compound-interest-calculator"></a>
+                        <a target="_blank" href="https://cah90.github.io/compound-interest/"><img src="images/compound-interest.png" alt="compound-interest"></a>
 
                         <a target="_blank" href="#"><img src=# alt="amor-de-cozinha"></a>
 
