--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </head>
 
     <body>
-        
+
         <div class="container">
             <div class="sideNav" id="sideNav">
                 <img src="images/cassia.jpeg" alt="profile photo">
@@ -41,7 +41,7 @@
 
             <div class="mainContent">
 
-                    <!-- <div id="debugScrollPosition"> </div> -->
+                <!-- <div id="debugScrollPosition"> </div> -->
 
                 <!-- About Section -->
                 <div class="section" id="about">
@@ -53,7 +53,8 @@
                         passionate about building websites. <br />
 
                         My passion for web design drove me to make a career change from HR to UX Design /
-                        Front-end Web Development in 2018 and since then I have been improving my skills and keeping up with the
+                        Front-end Web Development in 2018 and since then I have been improving my skills and keeping up
+                        with the
                         lastest technologies.
                     </p>
                     <a target="_blank" href="https://www.linkedin.com/in/c%C3%A1ssia-cristina-b-78059ab6/"><i
@@ -107,12 +108,31 @@
                     <h2>PROJECTS</h2>
                     <div id="containerProjects">
 
-                        <a target="_blank" href="https://www.amordecozinha.com"><img src="images/amor-de-cozinha.png"
-                                alt="amor-de-cozinha"></a>
+                        <img class="trigger" src="images/amor-de-cozinha.png"
+                            alt="amor de cozinha photo website">
 
-                        <a target="_blank" href="https://cah90.github.io/compound-interest/"><img src="images/compound-interest.png" alt="compound-interest"></a>
+                        <img class="trigger" src="images/compound-interest.png"
+                            alt="compound interest calculator photo website ">
 
-                        <a target="_blank" href="#"><img src=# alt="amor-de-cozinha"></a>
+
+
+                        <div class="modal">
+                            <div class="modalContent">
+                                <span class="closeButton">&times;</span>
+                                <img src="images/amor-de-cozinha.png" alt="amor de cozinha photo website">
+                                <p>It is an amazing brazilian recipe website</p>
+                            </div> <!-- end of modalContent div -->
+
+                            <div class="modalContent">
+                                <span class="closeButton">&times;</span>
+                                <img src="images/compound-interest.png"
+                                    alt="compound interest calculator photo website ">
+                                <p>It is an amazing website for making your compound interest calculations</p>
+                            </div> <!-- end of modalContent div -->
+
+                        </div> <!-- end of modal div -->
+
+
 
                     </div> <!-- end of containerProjects -->
 
