changes on the model box

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <a target="_blank" href="https://github.com/cah90"><i
                             class="social-icon fab fa-github-square"></i></a>
 
-                </div>
+                </div> <!-- end of the about section -->
 
                 <!-- Skills Section -->
                 <div class="section" id="skills">
@@ -108,70 +108,67 @@
                     <h2>PROJECTS</h2>
                     <div id="containerProjects">
 
-                        <img class="trigger" src="images/amor-de-cozinha.png"
-                            alt="amor de cozinha photo website">
+                        <img class="trigger" src="images/amor-de-cozinha.png" alt="amor de cozinha photo website">
 
                         <img class="trigger" src="images/compound-interest.png"
                             alt="compound interest calculator photo website ">
 
+                    </div> <!-- end of containerProjects -->
+
+                    <div class="modal">
+                        <div class="modalContent">
+                            <span class="closeButton">&times;</span>
+                            <a target="_blank" href="https://www.amordecozinha.com/"><img
+                                    src="images/amor-de-cozinha.png" alt="amor de cozinha photo website"></a>
+                            <p>It is an amazing brazilian recipe website</p>
+                        </div> <!-- end of modalContent div -->
 
 
-                        <div class="modal">
+                        
                             <div class="modalContent">
                                 <span class="closeButton">&times;</span>
-                                <img src="images/amor-de-cozinha.png" alt="amor de cozinha photo website">
-                                <p>It is an amazing brazilian recipe website</p>
-                            </div> <!-- end of modalContent div -->
-
-                            <div class="modalContent">
-                                <span class="closeButton">&times;</span>
-                                <img src="images/compound-interest.png"
-                                    alt="compound interest calculator photo website ">
+                                <a target="_blank" href="https://cah90.github.io/compound-interest/"><img
+                                        src="images/compound-interest.png"
+                                        alt="compound interest calculator photo website "></a>
                                 <p>It is an amazing website for making your compound interest calculations</p>
                             </div> <!-- end of modalContent div -->
-
-                        </div> <!-- end of modal div -->
-
-
-
-                    </div> <!-- end of containerProjects -->
+                    </div> <!-- end of modal div -->
 
                 </div> <!-- end of projects section -->
 
-                <!-- Contact Section -->
-                <div class="section" id="contact">
-                    <h2>CONTACT ME</h2>
+                    <!-- Contact Section -->
+                    <div class="section" id="contact">
+                        <h2>CONTACT ME</h2>
 
-                    <form>
-                        <div class="form-group">
-                            <input type="text" id="name">
-                            <label for="name">Name</label>
+                        <form>
+                            <div class="form-group">
+                                <input type="text" id="name">
+                                <label for="name">Name</label>
 
-                        </div>
-                        <div class="form-group">
-                            <input type="text" id="email">
-                            <label for="email">Email</label>
-                        </div>
-                        <div class="form-group">
-                            <textarea rows="3" type="text" id="message"></textarea>
-                            <label for="message">Message</label>
-                        </div>
+                            </div>
+                            <div class="form-group">
+                                <input type="text" id="email">
+                                <label for="email">Email</label>
+                            </div>
+                            <div class="form-group">
+                                <textarea rows="3" type="text" id="message"></textarea>
+                                <label for="message">Message</label>
+                            </div>
 
-                        <button type="button">Send</button>
-                    </form>
+                            <button type="button">Send</button>
+                        </form>
 
-                </div> <!-- end of contact section -->
+                    </div> <!-- end of contact section -->
 
-                <footer>
-                    <p>© Copyright 2019 <span class="footerSpan">♥</span> Cássia Bernardo</p>
-                </footer>
+                    <footer>
+                        <p>© Copyright 2019 <span class="footerSpan">♥</span> Cássia Bernardo</p>
+                    </footer>
 
-            </div> <!-- end of mainContent -->
-        </div> <!-- end of container -->
+                </div> <!-- end of mainContent -->
+            </div> <!-- end of container -->
 
 
-        <script src="script.js"></script>
+            <script src="script.js"></script>
 
-        </bodydata-target="#sideNav">
-
+            </body> 
 </html>
