image hover overlay added

--- a/index.html
+++ b/index.html
@@ -107,11 +107,20 @@
                 <div class="section" id="projects">
                     <h2>PROJECTS</h2>
                     <div id="containerProjects">
-                        <img class="trigger" data-image="#amor-de-cozinha"
-                            src="images/amor-de-cozinha.png" alt="amor de cozinha photo website">
+                        <div class="sub-container">
+                            <div class="clickable" data-image="#amor-de-cozinha">
+                                <span><i class="fas fa-plus"></i></span>
+                            </div> <!-- end of clickable -->
+                            <img class="trigger" src="images/amor-de-cozinha.png" alt="amor de cozinha photo website">
+                        </div> <!-- end of subcontainer -->
 
-                        <img class="trigger" data-image="#compound-interest" src="images/compound-interest.png"
-                            alt="compound interest calculator photo website ">
+                        <div class="sub-container">
+                            <div class="clickable" data-image="#compound-interest">
+                                <span><i class="fas fa-plus"></i></span>
+                            </div> <!-- end of clickable -->
+                            <img class="trigger" src="images/compound-interest.png"
+                                alt="compound interest calculator photo website ">
+                        </div> <!-- end of subcontainer -->
 
                     </div> <!-- end of containerProjects -->
 
