--- a/index.html
+++ b/index.html
@@ -5,19 +5,23 @@
         <meta charset="utf-8">
 
         <title>Cássia Bernardo</title>
+        <meta name=”viewport” content="width=device-width" , initial-scale=1, user-scalable=no”>
+
 
         <link rel="icon" href="images/favicon.ico" type="favicon.ico" />
 
         <!-- Google Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Montserrat|Saira+Extra+Condensed&display=swap"
             rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 
         <!-- Font Awesome Script -->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
             integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 
         <!-- CSS Stylesheet -->
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="desktop.css">
+        <link rel="stylesheet" href="smartphones.css">
 
         <!-- jQuery Script -->
         <script src="https://code.jquery.com/jquery-3.4.1.js"
@@ -26,18 +30,29 @@
     </head>
 
     <body>
-
         <div class="container">
-            <div class="sideNav" id="sideNav">
-                <img src="images/cassia.jpeg" alt="profile photo">
-                <div class="myLinks">
-                    <a class="active" href="#about">About</a>
-                    <a href="#skills">Skills</a>
-                    <a href="#projects">Projects</a>
-                    <a href="#contact">Contact</a>
-                </div> <!-- end of myLinks -->
-            </div> <!-- end of sideNav -->
+            <nav>
+                <div class="sideNav" id="mySideNav">
+                    <img src="images/cassia.jpeg" alt="profile photo">
+                    <div class="myLinks" id="menu-desktop">
+                        <a class="active" href="#about">About</a>
+                        <a href="#skills">Skills</a>
+                        <a href="#projects">Projects</a>
+                        <a href="#contact">Contact</a>
+                    </div> <!-- end of myLinks -->
 
+                    <div class="myLinks" id="menu-mobile">
+                        <a href="#about">About</a>
+                        <a href="#skills">Skills</a>
+                        <a href="#projects">Projects</a>
+                        <a href="#contact">Contact</a>
+                    </div> <!-- end of myLinks -->
+
+                    <span class="menu-name">Cássia Bernardo</span>
+                    <a href="#" id="menu-btn"><i class="fas fa-bars"></i></a>
+
+                </div> <!-- end of sideNav -->
+            </nav>
 
             <div class="mainContent">
 
