--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 
         <!-- CSS Stylesheet -->
-        <link rel="stylesheet" href="desktop.css">
-        <link rel="stylesheet" href="smartphones.css">
+        <link rel="stylesheet" href="css/desktop.css">
+        <link rel="stylesheet" href="css/smartphones.css">
 
         <!-- jQuery Script -->
         <script src="https://code.jquery.com/jquery-3.4.1.js"
@@ -167,6 +167,8 @@
                 <div class="section" id="contact">
                     <h2>CONTACT ME</h2>
 
+                    <div class="confirmation-message"></div>
+
                     <form>
                         <div class="form-group">
                             <input type="text" id="name">
@@ -182,7 +184,7 @@
                             <label for="message">Message</label>
                         </div>
 
-                        <button type="button">Send</button>
+                        <button type="submit" id="submit">Send</button>
                     </form>
 
                 </div> <!-- end of contact section -->
@@ -195,7 +197,7 @@
         </div> <!-- end of container -->
 
 
-        <script src="script.js"></script>
+        <script src="script.js" async defer></script>
 
     </body>
 
